testdata/baselines/reference/submodule/conformance/checkJsdocTypeTag1.errors.txt
0.js(10,1): error TS2322: Type 'string' is not assignable to type 'number'.
0.js(14,1): error TS2322: Type 'string' is not assignable to type 'number'.


==== 0.js (2 errors) ====
    // @ts-check
    /** @type {String} */
    var S = "hello world";
    
    /** @type {number} */
    var n = 10;
    
    /** @type {*} */
    var anyT = 2;
    anyT = "hello";
    ~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    /** @type {?} */
    var anyT1 = 2;
    anyT1 = "hi";
    ~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    /** @type {Function} */
    const x = (a) => a + 1;
    x(1);
    
    /** @type {function} */
    const y = (a) => a + 1;
    y(1);
    
    /** @type {function (number)} */
    const x1 = (a) => a + 1;
    x1(0);
    
    /** @type {function (number): number} */
    const x2 = (a) => a + 1;
    x2(0);
    
    /**
     * @type {object}
     */
    var props = {};
    
    /**
     * @type {Object}
     */
    var props = {};
    